# TaoRenderer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TestApp_OpenGL.sln
3DApp/: 3DApp.cpp  3DApp.h  3DApp.vcxproj  3DApp.vcxproj.filters
Design/: PbrRenderer.drawio  Resources.drawio  SdfTree.drawio
Legacy/: Camera.h  Diagnostics.h  FrameBuffer.h  GeometryHelper.h  Mesh.h  Obect.h  Scene.h  Shader.cpp  Shader.h  Timer.h  Windowcpp.cpp
Legacy/Assets/Environments/Outdoor/IrradianceMap/: posx.hdr  posy.hdr
Legacy/Assets/Environments/Outdoor/Radiance/: negx.dds  negy.dds  negz.dds  posy.dds
Legacy/Assets/Environments/Outdoor/Skybox/: negx.hdr  negz.hdr  posx.hdr  posz.hdr
Legacy/Assets/Models/: Cadillac.mtl  Cathedral.mtl.mtl  Engine.mtl  Jinx.mtl  RadialEngine.fbx  UtilityKnife.fbx
Legacy/Shaders/Deferred/: GPass.frag  GPass.vert  LightPass.vert  LightPassHelper.glsl
Legacy/Shaders/Forward/: MeshUnlit.frag  MeshUnlit.vert  OmniDirShadow.frag  OmniDirShadow.geom  PassThrough.vert  Skybox.frag  ThickPoints.geom  Velocity.vert
Legacy/Shaders/Include/: UboDefs.glsl
Legacy/Shaders/PostProcessing/: PostProcessing.vert
TaOgl/: GeometricPrimitives.h  Input.h  Instrumentation.h  OglUtils.h  RenderContext.cpp  RenderContext.h  RenderContextUtils.h  Resources.cpp  Resources.h  TaOgl.cpp  TaOgl.vcxproj  TaOgl.vcxproj.filters
TaOglApp/: CMakeLists.txt  main.cpp
TaOglApp/Assets/HDRI/: brown_photostudio_05_1k.hdr  drackenstein_quarry_1k.hdr  pine_attic_1k.hdr
TaOglApp/Assets/Models/ApolloAndDaphne/: license.txt  scene.gltf
TaOglApp/Assets/Models/DamagedHelmet/: scene.gltf
TaOglApp/Assets/Models/ShadowTest/: shadowTest.gltf
TaOglApp/ImGui/: imgui_demo.cpp
TaOglApp/config/: TaOglAppConfig.h.in
TaOglApp/src/: TaoScene.cpp  TaoScene.h  main.cpp
TaOglApp/src/ImGui/: imgui.ini
TaOglContext/: CMakeLists.txt
TaOglContext/include/: GeometricPrimitives.h  Input.h  Instrumentation.h  OglUtils.h  RenderContext.h  RenderContextUtils.h  Resources.h  TaoMath.h
TaOglContext/include/glad/: glad.h
TaOglContext/lib/: glfw3.lib
TaOglContext/src/: Instrumentation.cpp  RenderContext.cpp  RenderContextUtils.cpp  Resources.cpp  TaoMath.cpp  glad.c
TaOglGizmos/: CMakeLists.txt
TaOglGizmos/include/: GizmosHelper.h  GizmosRenderer.h  ShaderGraph.h  ShaderGraphUtils.h  TaoGizmosShaderGraph.h
TaOglGizmos/shaders/: Helper.glsl  LineStrip.frag  LineStrip.geom  LineStrip.vert  Lines.frag  Lines.geom  Lines.vert  Mesh.frag  Mesh.vert  Points.frag  Points.geom  Points.vert
TaOglGizmos/src/: GizmosRenderer.cpp  GizmosShaderLib.cpp  GizmosShaderLib.h  GizmosUtils.h  ShaderGraph.cpp
TaOglPbr/: CMakeLists.txt
TaOglPbr/config/: TaOglPbrConfig.h.in
TaOglPbr/include/: PbrRenderer.h
TaOglPbr/shaders/: GPass.frag  GPass.vert  GPassHelper.glsl  LightPass.frag  LightPass.vert  LtcHelper.glsl  PbrHelper.glsl  PointShadowMap.frag  PointShadowMap.geom  PointShadowMap.vert  ProcessEnvironment.comp  ShadowHelper.glsl  ShadowPass.frag  UboDefs.glsl
TaOglPbr/src/: PbrRenderer.cpp
TaOgl_Gizmos/: GizmosHelper.h  GizmosRenderer.cpp  GizmosRenderer.h  GizmosShaderLib.cpp  GizmosShaderLib.h  GizmosUtils.h  TaOgl_Gizmos.vcxproj  TaOgl_Gizmos.vcxproj.filters  main.cpp
TaOgl_Gizmos/Shaders/: LineStrip.frag  LineStrip.geom  LineStrip.vert  Lines.frag  Lines.geom  Lines.vert  Mesh.frag  Mesh.vert  MeshUnlit.frag  MeshUnlit.vert  Points.frag  Points.geom  Points.vert  ThickLineStrip.geom  ThickLines.geom  ThickPoints.geom
TaOgl_Gizmos/Shaders/Include/: UboDefs.glsl
TestApp_OpenGL/: Camera.h  FileUtils.h  GeometryHelper.h  Mesh.h  Scene.h  SceneUtils.h  Shader.h  TestApp_OpenGL.vcxproj  TestApp_OpenGL.vcxproj.filters  Windowcpp.cpp  imgui.ini
TestApp_OpenGL/Assets/Environments/Outdoor/: IBLbakerBrdf.dds  IBLbakerDiffuseHDR.dds  IBLbakerDiffuseMDR.dds  output_pmrem_negx.dds  output_pmrem_negy.dds  output_pmrem_negz.dds  output_pmrem_posx.dds  output_pmrem_posy.dds  output_pmrem_posz.dds
TestApp_OpenGL/Assets/Environments/Outdoor/IrradianceMap/: negx.hdr  negy.hdr  negz.hdr  posz.hdr
TestApp_OpenGL/Assets/Environments/Outdoor/Radiance/: negx.dds  negy.dds  negz.dds  posx.dds  posy.dds  posz.dds
TestApp_OpenGL/Assets/Environments/Outdoor/Skybox/: negy.hdr  posy.hdr
TestApp_OpenGL/Assets/Models/: Colt.fbx  Draenei.fbx  House.mtl  Knob.mtl  OldBridge.mtl  Porsche911.mtl  Spaceship.fbx  Sponza.mtl  Trex.mtl  Turbine.mtl  trees.mtl
TestApp_OpenGL/Shaders/Deferred/: GPass.vert  LightPass.frag  LightPassHelper.glsl
TestApp_OpenGL/Shaders/Forward/: MeshUnlit.vert  Skybox.vert  ThickLineStrip.geom  ThickLines.geom  Velocity.frag  Velocity.vert
TestApp_OpenGL/Shaders/Include/: DebugViz.glsl  UboDefs.glsl
TestApp_OpenGL/Shaders/PostProcessing/: TAA.frag
